Update JasperReport implementation